--- a/Example/TestApp/build.gradle
+++ b/Example/TestApp/build.gradle
@@ -9,7 +9,7 @@ android {
             : "34.0.0"
     )
     defaultConfig {
-        minSdkVersion 26
+        minSdkVersion 24
         targetSdkVersion 34
         versionCode project.hasProperty("versionCode")
             ? project.getProperty("versionCode").toInteger()
@@ -25,6 +25,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+    }
+    kotlinOptions {
+        jvmTarget = libs.versions.jvm.target.kotlin.get()
     }
     buildFeatures {
         dataBinding true
