--- a/Example/TestApp/build.gradle
+++ b/Example/TestApp/build.gradle
@@ -48,21 +48,22 @@ dependencies {
 
     // Standard libraries
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation("androidx.core:core-ktx:1.13.1")
+    implementation "androidx.appcompat:appcompat:1.6.1"
+    implementation "androidx.core:core-ktx:1.13.1"
+    implementation "com.google.android.material:material:1.9.0"
 
     // Advertisement
-    implementation 'com.google.android.gms:play-services-ads:23.0.0'
+    implementation "com.google.android.gms:play-services-ads:23.0.0"
 
     // Image Downloader
     implementation "com.github.bumptech.glide:glide:4.14.2"
 
     // Multidex
-    implementation 'androidx.multidex:multidex:2.0.1'
+    implementation "androidx.multidex:multidex:2.0.1"
 
     // Video Player
-    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'
-    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
-    implementation 'com.google.android.exoplayer:exoplayer-ui:2.19.1'
-    implementation 'com.google.android.exoplayer:extension-ima:2.19.1'
+    implementation "com.google.android.exoplayer:exoplayer:2.19.1"
+    implementation "com.google.android.exoplayer:exoplayer-core:2.19.1"
+    implementation "com.google.android.exoplayer:exoplayer-ui:2.19.1"
+    implementation "com.google.android.exoplayer:extension-ima:2.19.1"
 }
