--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,13 +26,15 @@ dagger = "2.51.1"
 jvm-target = "17"
 jvm-target-kotlin = "17"
 sdk-min = "24"
-sdk-compile = "34"
+sdk-compile = "36"
 build-tools-version = "34.0.0"
 # test
 test-junit = "4.13.2"
 test-mockk = "1.13.11"
 # lint
 detekt = "1.23.6"
+# documentation
+dokka = "2.0.0"
 
 [libraries]
 # plugin
@@ -81,6 +83,7 @@ detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
 kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "kotlin-ksp" }
 maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
 nmcp = { id = "com.gradleup.nmcp", version.ref = "nmcp" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
 [bundles]
 # bom
