--- a/Example/TestApp/src/main/AndroidManifest.xml
+++ b/Example/TestApp/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-1875909575462531~6255590079" />
+        <meta-data
+            android:name="com.google.android.gms.ads.flag.OPTIMIZE_INITIALIZATION"
+            android:value="true"/>
+        <meta-data
+            android:name="com.google.android.gms.ads.flag.OPTIMIZE_AD_LOADING"
+            android:value="true"/>
 
         <activity
             android:name=".view.MainActivity"
